--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,15 @@ x-n8n: &service-n8n
     - N8N_DIAGNOSTICS_ENABLED=false
     - N8N_PERSONALIZATION_ENABLED=false
     - N8N_ENCRYPTION_KEY=${N8N_ENCRYPTION_KEY}
+    - GENERIC_TIMEZONE=Asia/Singapore
     - N8N_USER_MANAGEMENT_JWT_SECRET=${N8N_USER_MANAGEMENT_JWT_SECRET}
     - NODE_FUNCTION_ALLOW_BUILTIN=*
+    - NODE_FUNCTION_ALLOW_EXTERNAL=*
+    - N8N_SMTP_PORT=${N8N_SMTP_PORT}
+    - N8N_SMTP_HOST=${N8N_SMTP_HOST}
+    - N8N_SMTP_SENDER=${N8N_SMTP_SENDER}
+    - N8N_SMTP_USER=${N8N_SMTP_USER}
+    - N8N_SMTP_PASS=${N8N_SMTP_PASS}    
   links:
     - postgres
 
@@ -72,10 +79,10 @@ services:
     ports:
       - 5678:5678
     volumes:
-      - n8n_storage:/home/node/.n8n
+      - ./storage:/home/node/.n8n
       - ./n8n/backup:/backup
       - ./shared:/data/shared
-      - /Users/jasonnathan/Downloads/Obsidian:/files # Maps the Obsidian folder on host to /files in container
+      - ./n8n/files:/files # Maps the Obsidian folder on host to /files in container
     depends_on:
       postgres:
         condition: service_healthy
